--- a/.gitignore
+++ b/.gitignore
@@ -44,9 +44,11 @@
 
 # Kernel Module Compile Results
 *.mod*
-*.cmd
+# *.cmd
 .tmp_versions/
 modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+
+Debug/
